// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloseReasonSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "accepted": {
      "items": {
        "exclusiveMinimum": 0,
        "maximum": 9007199254740991,
        "type": "integer",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`ComponentHandleSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "componentName": {
      "maxLength": 256,
      "minLength": 1,
      "type": "string",
    },
    "domPath": {
      "maxLength": 8192,
      "type": "string",
    },
    "filePath": {
      "maxLength": 4096,
      "minLength": 1,
      "type": "string",
    },
    "id": {
      "pattern": "^[A-Za-z0-9_-]{1,128}$",
      "type": "string",
    },
    "lineRange": {
      "prefixItems": [
        {
          "maximum": 9007199254740991,
          "minimum": 0,
          "type": "integer",
        },
        {
          "maximum": 9007199254740991,
          "minimum": 0,
          "type": "integer",
        },
      ],
      "type": "array",
    },
    "parentChain": {
      "items": {
        "maxLength": 256,
        "type": "string",
      },
      "maxItems": 64,
      "type": "array",
    },
    "timestamp": {
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "id",
    "componentName",
    "filePath",
    "lineRange",
    "domPath",
    "parentChain",
    "timestamp",
  ],
  "type": "object",
}
`;

exports[`ExchangeRequestSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "bootstrapToken": {
      "minLength": 1,
      "type": "string",
    },
    "clientNonce": {
      "minLength": 16,
      "type": "string",
    },
  },
  "required": [
    "clientNonce",
    "bootstrapToken",
  ],
  "type": "object",
}
`;

exports[`ExchangeResponseSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "exp": {
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "type": "integer",
    },
    "serverNonce": {
      "minLength": 16,
      "type": "string",
    },
    "sessionToken": {
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "sessionToken",
    "exp",
    "serverNonce",
  ],
  "type": "object",
}
`;

exports[`HandshakeSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "bootstrapToken": {
      "minLength": 1,
      "type": "string",
    },
    "daemonVersion": {
      "anyOf": [
        {
          "minLength": 1,
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "editor": {
      "enum": [
        "cursor",
        "vscode",
        "webstorm",
        "zed",
      ],
      "type": "string",
    },
    "httpUrl": {
      "format": "uri",
      "type": "string",
    },
    "pluginVersion": {
      "minLength": 1,
      "type": "string",
    },
    "wsUrl": {
      "format": "uri",
      "type": "string",
    },
  },
  "required": [
    "wsUrl",
    "httpUrl",
    "bootstrapToken",
    "editor",
    "pluginVersion",
    "daemonVersion",
  ],
  "type": "object",
}
`;

exports[`JsonRpcErrorSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "code": {
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "data": {},
    "message": {
      "type": "string",
    },
  },
  "required": [
    "code",
    "message",
  ],
  "type": "object",
}
`;

exports[`JsonRpcNotificationSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "jsonrpc": {
      "const": "2.0",
      "type": "string",
    },
    "method": {
      "enum": [
        "rpc.request",
        "selection.updated",
        "handshake.rotated",
        "resync.instanceChanged",
        "resync.gap",
        "hello",
        "ping",
        "pong",
      ],
      "type": "string",
    },
    "params": {},
  },
  "required": [
    "jsonrpc",
    "method",
  ],
  "type": "object",
}
`;

exports[`JsonRpcRequestSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "id": {
      "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
      "type": "string",
    },
    "jsonrpc": {
      "const": "2.0",
      "type": "string",
    },
    "method": {
      "enum": [
        "rpc.request",
        "selection.updated",
        "handshake.rotated",
        "resync.instanceChanged",
        "resync.gap",
        "hello",
        "ping",
        "pong",
      ],
      "type": "string",
    },
    "params": {},
  },
  "required": [
    "jsonrpc",
    "id",
    "method",
  ],
  "type": "object",
}
`;

exports[`JsonRpcResponseSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "error": {
      "additionalProperties": false,
      "properties": {
        "code": {
          "maximum": 9007199254740991,
          "minimum": -9007199254740991,
          "type": "integer",
        },
        "data": {},
        "message": {
          "type": "string",
        },
      },
      "required": [
        "code",
        "message",
      ],
      "type": "object",
    },
    "id": {
      "anyOf": [
        {
          "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "jsonrpc": {
      "const": "2.0",
      "type": "string",
    },
    "result": {},
  },
  "required": [
    "jsonrpc",
    "id",
  ],
  "type": "object",
}
`;

exports[`ManifestSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "components": {
      "additionalProperties": {
        "additionalProperties": false,
        "properties": {
          "displayName": {
            "maxLength": 256,
            "minLength": 1,
            "type": "string",
          },
          "exportKind": {
            "enum": [
              "default",
              "named",
            ],
            "type": "string",
          },
          "filePath": {
            "maxLength": 4096,
            "minLength": 1,
            "type": "string",
          },
          "lineRange": {
            "prefixItems": [
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
            ],
            "type": "array",
          },
        },
        "required": [
          "filePath",
          "exportKind",
          "lineRange",
          "displayName",
        ],
        "type": "object",
      },
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "contentHash": {
      "pattern": "^[0-9a-f]{64}$",
      "type": "string",
    },
    "framework": {
      "const": "react",
      "type": "string",
    },
    "generatedAt": {
      "minLength": 1,
      "type": "string",
    },
    "locs": {
      "additionalProperties": {
        "additionalProperties": false,
        "properties": {
          "componentKey": {
            "maxLength": 8192,
            "minLength": 1,
            "type": "string",
          },
          "componentName": {
            "maxLength": 256,
            "minLength": 1,
            "type": "string",
          },
          "filePath": {
            "maxLength": 4096,
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "componentKey",
          "filePath",
          "componentName",
        ],
        "type": "object",
      },
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "schemaVersion": {
      "const": "1.0",
      "type": "string",
    },
  },
  "required": [
    "schemaVersion",
    "framework",
    "generatedAt",
    "contentHash",
    "components",
    "locs",
  ],
  "type": "object",
}
`;

exports[`SelectionFileSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "current": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "componentName": {
              "maxLength": 256,
              "minLength": 1,
              "type": "string",
            },
            "domPath": {
              "maxLength": 8192,
              "type": "string",
            },
            "filePath": {
              "maxLength": 4096,
              "minLength": 1,
              "type": "string",
            },
            "id": {
              "pattern": "^[A-Za-z0-9_-]{1,128}$",
              "type": "string",
            },
            "lineRange": {
              "prefixItems": [
                {
                  "maximum": 9007199254740991,
                  "minimum": 0,
                  "type": "integer",
                },
                {
                  "maximum": 9007199254740991,
                  "minimum": 0,
                  "type": "integer",
                },
              ],
              "type": "array",
            },
            "parentChain": {
              "items": {
                "maxLength": 256,
                "type": "string",
              },
              "maxItems": 64,
              "type": "array",
            },
            "timestamp": {
              "maximum": 9007199254740991,
              "minimum": 0,
              "type": "integer",
            },
          },
          "required": [
            "id",
            "componentName",
            "filePath",
            "lineRange",
            "domPath",
            "parentChain",
            "timestamp",
          ],
          "type": "object",
        },
        {
          "type": "null",
        },
      ],
    },
    "history": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "componentName": {
            "maxLength": 256,
            "minLength": 1,
            "type": "string",
          },
          "domPath": {
            "maxLength": 8192,
            "type": "string",
          },
          "filePath": {
            "maxLength": 4096,
            "minLength": 1,
            "type": "string",
          },
          "id": {
            "pattern": "^[A-Za-z0-9_-]{1,128}$",
            "type": "string",
          },
          "lineRange": {
            "prefixItems": [
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
            ],
            "type": "array",
          },
          "parentChain": {
            "items": {
              "maxLength": 256,
              "type": "string",
            },
            "maxItems": 64,
            "type": "array",
          },
          "timestamp": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
        },
        "required": [
          "id",
          "componentName",
          "filePath",
          "lineRange",
          "domPath",
          "parentChain",
          "timestamp",
        ],
        "type": "object",
      },
      "maxItems": 1000,
      "type": "array",
    },
  },
  "required": [
    "current",
    "history",
  ],
  "type": "object",
}
`;

exports[`SelectionPutBodySchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "clientId": {
      "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
      "type": "string",
    },
    "meta": {
      "additionalProperties": {},
      "properties": {
        "source": {
          "enum": [
            "picker",
            "mcp",
            "dev",
          ],
          "type": "string",
        },
      },
      "required": [
        "source",
      ],
      "type": "object",
    },
    "nodes": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "componentName": {
            "maxLength": 256,
            "minLength": 1,
            "type": "string",
          },
          "domPath": {
            "maxLength": 8192,
            "type": "string",
          },
          "filePath": {
            "maxLength": 4096,
            "minLength": 1,
            "type": "string",
          },
          "id": {
            "pattern": "^[A-Za-z0-9_-]{1,128}$",
            "type": "string",
          },
          "lineRange": {
            "prefixItems": [
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              {
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
            ],
            "type": "array",
          },
          "parentChain": {
            "items": {
              "maxLength": 256,
              "type": "string",
            },
            "maxItems": 64,
            "type": "array",
          },
          "timestamp": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
        },
        "required": [
          "id",
          "componentName",
          "filePath",
          "lineRange",
          "domPath",
          "parentChain",
          "timestamp",
        ],
        "type": "object",
      },
      "maxItems": 1,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "nodes",
  ],
  "type": "object",
}
`;

exports[`SelectionPutResponseSchema JSON Schema matches committed golden 1`] = `
{
  "additionalProperties": {},
  "properties": {
    "acceptedAt": {
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "type": "integer",
    },
    "selectionSeq": {
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "selectionSeq",
    "acceptedAt",
  ],
  "type": "object",
}
`;

exports[`WsFrameSchema JSON Schema matches committed golden 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "properties": {
        "id": {
          "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
          "type": "string",
        },
        "jsonrpc": {
          "const": "2.0",
          "type": "string",
        },
        "method": {
          "enum": [
            "rpc.request",
            "selection.updated",
            "handshake.rotated",
            "resync.instanceChanged",
            "resync.gap",
            "hello",
            "ping",
            "pong",
          ],
          "type": "string",
        },
        "params": {},
      },
      "required": [
        "jsonrpc",
        "id",
        "method",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "jsonrpc": {
          "const": "2.0",
          "type": "string",
        },
        "method": {
          "enum": [
            "rpc.request",
            "selection.updated",
            "handshake.rotated",
            "resync.instanceChanged",
            "resync.gap",
            "hello",
            "ping",
            "pong",
          ],
          "type": "string",
        },
        "params": {},
      },
      "required": [
        "jsonrpc",
        "method",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "error": {
          "additionalProperties": false,
          "properties": {
            "code": {
              "maximum": 9007199254740991,
              "minimum": -9007199254740991,
              "type": "integer",
            },
            "data": {},
            "message": {
              "type": "string",
            },
          },
          "required": [
            "code",
            "message",
          ],
          "type": "object",
        },
        "id": {
          "anyOf": [
            {
              "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
        },
        "jsonrpc": {
          "const": "2.0",
          "type": "string",
        },
        "result": {},
      },
      "required": [
        "jsonrpc",
        "id",
      ],
      "type": "object",
    },
  ],
}
`;
